--- a/style.css
+++ b/style.css
@@ -1,93 +1,119 @@
 
 /* ---- Layout Containers ---- */
 
-.container {
-    padding-left: 1em;
-    padding-right: 1em;
-    margin: 0;
+.bg-color {
+    background: linear-gradient(
+    to bottom,
+  rgb(66, 135, 190),
+  rgb(66, 135, 190) 50%,
+  rgb(36, 101, 161) 50%, 
+  rgb(36, 101, 161)
+);
+    background-size: 100% 20px;
 }
 
-.main-nav,
-.main-nav li {
-    float: right;
-    padding-right: 1em;
+.dialogue-effects {
+    border: solid 5px black;
 }
 
-.main-header {
-    background: black;
-    padding: 3em 0;
-    width: 100%;
+.header-effects {
+    background-color: black;
+    color: white;
+    font-family: 'Permanent Marker', cursive;
+    font-size: 200%;
+}
+
+.body-headers {
+    font-family: 'Permanent Marker', cursive;
+}
+
+.burger-style {
+    font-family: 'Permanent Marker', cursive;
+    color: black;
+    background-color: rgb(250, 217, 70);
+    text-decoration: none;
+}
+
+.burger-special {
+    color: black;
+}
+
+.footer-effects {
+    background-color: black;
     color: white;
 }
 
-.main-body {
-    position: relative;
-    padding: 10px;
-    padding-bottom: 160px;
+.title-effects {
+   width: 50%;
+   text-align: center;
+   padding: 20px 0 20px 0;
+   display: inline-block;
 }
 
-.main-footer {
-    position: absolute;
-    bottom: 0;
-    height: 160px;
-    width: 100%;
-    background: black;
+.nav-effects {
+    color: black;
+    background-color: rgb(250, 217, 70);
+    border: groove white;
+    margin: 10px;
 }
 
-.social-media {
+.nav-flex {
     display: flex;
-    position:absolute;
-    bottom:0;
-    width:100%;
-    height:140px;
+    justify-content: space-around;
 }
 
-/* ----- Stylization ----- */
-
-h1 {
-    padding-left: 1em;
-    font-family: initial;
-    font-size: 3em;
-    line-height: 20px
+a:hover {
+    background-color: rgb(255,90,0);
+    color: black;
 }
 
 p {
-    padding-left: 1em;
-    font-size: 2em;
+    font-family: 'Indie Flower', cursive;
+    font-size: 150%;
+    font-weight: bold;
 }
 
-a {
-    text-decoration: none;
-    color: hotpink;
-    padding: 1em;
+html, body {
+    margin: 0;
 }
 
-html {
-    position: relative;
+.logo-typography {
+    letter-spacing: 6px;
+}
+
+.main-body {
     min-height: 100%;
 }
 
-body {
-    margin: 0 0 100px; /* bottom equals footer height */
+h4 {
+    padding-top: 20px;
 }
 
-/* ==============================
-    Media Queries
-================================= */
+h6 {
+    padding-bottom: 20px;
+}
 
-@media (min-width: 480px) {
-}    
+.main-pic {
+    width: 100%;
+    padding: 20px;
+}
 
-@media (min-width: 769px) {
-    .wrap {
-        min-height: calc(100vh - 89px);
+/*------ Base Styles -------*/
+
+
+/*----------------- Media Queries -----------------*/
+
+@media (max-width: 576px) {
+    #main-nav {
+        display: none;
     }
-    
-    .container {
-        width: 70%;
-        max-width: 1000px;
-        margin: 0 auto;;
+  }
+
+@media (min-width: 577px) {
+    #burger-nav {
+        display: none;
     }
+}
 
-
+@media (max-width: 768px) {
 }
